# milli_tts

./: .env  .env.example  .gitignore  README.md  TRAINING_GUIDE_HINDI_MIMI.md  config.json  inference.py  pyproject.toml  requirements.txt  setup_colab.sh  train.py
docs/: ARCHITECTURE.md
milli_tts/: __init__.py  bootstrap.py
milli_tts/core/: __init__.py  config.py  logger.py  registry.py  static_memory_cache.py
milli_tts/data/: __init__.py  collator.py  dataset.py  mimi_codec.py  text_tokenizer.py  voice_bank.py
milli_tts/inference/: __init__.py  engine.py
milli_tts/models/: __init__.py  base.py  conditioning.py  factory.py  layers.py  rq_transformer.py  rq_transformer_v2.py  sampling.py
milli_tts/training/: __init__.py  checkpoint.py  distributed.py  hf_sync.py  optim.py  tracker.py  trainer.py
milli_tts/utils/: __init__.py  audio.py  seed.py
notebooks/: Colab_Train.ipynb
tests/: smoke_test.py
tools/: build_dataset.py  check_data.py  infer_from_hub.py
